--- a/settings.json
+++ b/settings.json
@@ -1,23 +1,23 @@
 {
   "engine_path": null,
   "engine_limit": "depth 40",
-  "window_width": 1010,
-  "window_height": 680,
-  "maximized": false,
+  "window_width": 1296,
+  "window_height": 916,
+  "maximized": true,
   "puzzle_db_location": "puzzles/lichess_db_puzzle.csv",
   "piece_theme": "Cburnett",
   "search_results_limit": 20000,
   "play_sound": true,
-  "auto_load_next": true,
+  "auto_load_next": false,
   "flip_board": false,
-  "show_coordinates": false,
+  "show_coordinates": true,
   "board_theme": "Blue",
   "lang": "English",
   "export_pgs": 50,
-  "last_min_rating": 0,
-  "last_max_rating": 1000,
-  "last_min_popularity": 0,
-  "last_theme": "All",
+  "last_min_rating": 2292,
+  "last_max_rating": 2535,
+  "last_min_popularity": 96,
+  "last_theme": "MateIn3",
   "last_opening": "Any",
   "last_variation": {
     "name": "Any_Variation",
